# DataStructures

./: 00_MachineLearning_and_Neurons.ipynb  CMakeLists.txt
ArrayList/: CMakeLists.txt
ArrayList/include/adt/: array_list.hpp  array_list.ipp
ArrayList/test/: CMakeLists.txt  array_list.cpp
examples/notebooks/: MNIST_Model_784.ipynb
